# grpc_study

./: .gitignore  README.md
proto/: gen.sh  test.proto
proto/cpp/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h
src/client/: CMakeLists.txt  base_rpc.cpp  base_rpc.h  client.cpp  client.h  client_rpc.cpp  client_rpc.h  config.json  main.cpp  trade_engin.h  trade_engine.cpp  user_rpc.cpp  user_rpc.h
src/include/: channel.h  data_struct.h  global_declare.h  json.hpp  log.h  package_base.h  package_simple.h  thread_safe_singleton.hpp  time_util.h  util.h
src/server/: CMakeLists.txt  bi_stream_rpc.cpp  bi_stream_rpc.h  config.cpp  config.h  data_console.h  data_struct.h  main.cpp  rpc.cpp  rpc.h  server.cpp  server.h  server_spi.cpp  server_spi.h  simple_rpc.cpp  simple_rpc.h  sync_rpc.cpp  sync_rpc.h  test.cpp  test.h  trade_engine.cpp  trade_engine.h
src/server/test/: test_template_add.cpp  test_template_add.h
